<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.swetashinde.mycreditapp.fragments.PersonalInfoName"
    android:layout_margin="30dp">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hello_blank_fragment"
            android:id="@+id/textView"
            android:layout_marginTop="@dimen/keyline_1_minus_8dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/residence_info_address_title"
            android:textColor="@android:color/black"
            android:layout_marginBottom="16dp"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/address1_label">
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"


        </TextView>

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/address1"
            android:hint="@string/address1"

            />



        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/address2"
            android:hint="@string/address2"

            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ca_city_title">
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"


        </TextView>

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/city"
            android:hint="@string/ca_city_hint"
            android:layout_margin="0dp"

            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ca_state_title">
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"


        </TextView>

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/state"
            android:hint="@string/ca_state_hint"
            android:layout_margin="0dp"

            />

        <TextView

            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ca_zip_title">
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"


        </TextView>

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/zip"
            android:hint="@string/ca_zip_hint"
            android:layout_margin="0dp"

            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next"
            android:background="@drawable/ca_next_button_background"
            android:layout_marginTop="16dp"
            />
    </LinearLayout>

</RelativeLayout>
