<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.swetashinde.mycreditapp.fragments.PersonalInfoName"
    android:layout_margin="30dp">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hello_blank_fragment"
            android:id="@+id/textView"
            android:layout_marginTop="@dimen/keyline_1_minus_8dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/employment_info_details_title"
            android:textColor="@android:color/black"
            android:layout_marginBottom="16dp"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ca_employer_name_title">
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"


        </TextView>

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/employerName"
            android:hint="@string/ca_employer_name_hint"

            />




        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/employee_title">
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"


        </TextView>

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:hint="@string/employee_title_hint"
            android:layout_margin="0dp"

            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/startdate_title">
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"


        </TextView>

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/startDate"
            android:hint="@string/start_date_hint"
            android:layout_margin="0dp"

            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ca_employer_phone_number_title">
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"


        </TextView>

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phoneNumber"
            android:hint="@string/ca_employer_phone_number_hint"
            android:layout_margin="0dp"

            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ca_employment_gross_income_hint">
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"


        </TextView>

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/grossIncome"
            android:hint="@string/ca_employment_gross_income_hint"
            android:layout_margin="0dp"

            />






        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next"
            android:background="@drawable/ca_next_button_background"
            android:layout_marginTop="16dp"
            />
    </LinearLayout>

</RelativeLayout>
